# TravelRAG

./: .gitignore  LLM_answers.py  README.md  data.py  embeddings.py  environment.yaml  environment_KEREN_20240815.yaml  evaluation.py  index.py  pyproject.toml  retrieve.py  run_UC1_request_plan.py  run_UC2_request_to_location.py  time_comparison.py  travel_guide_ui.py  utils.py
API_keys/: chohere_api_keys.txt  pinecone_api_key.txt
UI/: travel_guide_ui.py
datasets/: generate_user_requests_Use_Case_1.py  images_names.csv  sample_imgs.py
datasets/images/: Blue Caves, Zakynthos.avif  Palamidi Castle, Nafplio.avif  Shipwreck Beach, Zakynthos.avif  brazil Ibirapuera Park, São Paulo.avif  brazil Museu de Arte de São Paulo.avif  brazil São Paulo Cathedral.avif  brzail Beco do Batman, São Paulo.avif  sydney Royal Botanic Garden Sydney.avif
datasets/test_images_for_UseCase2/: Arch of Galerius, Thessaloniki.avif  Canal d’Amour, Corfu.avif  Drogarati Cave, Argostoli.avif  Knossos, Crete.avif  Palace of the Grand Master of the Knights, Rhodes.avif  Panagia Paraportiani, Mykonos.avif  The Acropolis, Athens.avif  brazil Copacabana Beach, Rio de Janeiro.avif  brazil Ipanema Beach, Rio de Janeiro.avif  (+5 more)
environments/: env_KEREN_20240826.yaml  environment.yaml  environment.yml  my_environment_backup.yaml  py2_env.yml  stable_diff.yaml
src/: LLM_answers.py  data.py  embeddings.py  evaluation.py  img_generation.py  index.py  prompts.py  retrieve.py  run_UC1_request_plan.py  run_UC2_request_to_location.py  utils.py
tests/: test_get_system_response
(+41 files in other folders)
